# rss-bot

./: .gitignore  Cargo.toml  GITHUB_ACTION_GUIDE.md  README.md
.github/workflows/: deploy.yml
config/: settings.yaml
src/: config.rs  crawler.rs  downloader.rs  main.rs  models.rs
